bk_ida/gccida/c1/save_line_notes
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/save_line_notes/src/haifa-sched.c:1680:4: error: expected ';' after expression
rtx v5; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/save_line_notes/src/haifa-sched.c:1680:5: error: use of undeclared identifier 'v5'
rtx v5; // rdx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/save_line_notes/src/haifa-sched.c:1688:33: error: use of undeclared identifier 'v5'
if ( *( _WORD *)head != 37 || ( v5 = head, head[2].fld[0].rtint <= 0) ) 
                                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/save_line_notes/src/haifa-sched.c:1691:1: error: use of undeclared identifier 'v5'
v5 = v4; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/save_line_notes/src/haifa-sched.c:1694:6: error: use of undeclared identifier 'v5'
v4 = v5; 
     ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/save_line_notes/src/obj/haifa-sched.o] Error 1
